# govcookiecutter-lite

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  README.md  accessibility.html  cookiecutter.json  docs_README.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  accessibility.doctree  docs_README.doctree  environment.pickle  index.doctree
.doctrees/contributing_guide/: docs_contributor_README.doctree  modify_govcookiecutter-lite.doctree
.doctrees/govcookiecutter_structure/: docs.doctree  docs_structure_README.doctree  example.doctree  hooks.doctree  tests.doctree
.doctrees/reference/: docs_ref_README.doctree
.doctrees/{{ cookiecutter.repo_name }}/: docs.doctree  docs_repo_README.doctree  dot_govcookiecutter.doctree  source_code.doctree  tests.doctree
.github/workflows/: govcookiecutter-build.yml  govcookiecutter-template-build.yml
_sources/: docs_README.md.txt
_sources/contributing_guide/: docs_contributor_README.md.txt  modify_govcookiecutter-lite.md.txt
contributing_guide/: docs_contributor_README.html  modify_govcookiecutter-lite.html
docs/: accessibility.md  conf.py  docs_README.md  index.md
docs/contributing_guide/: docs_contributor_README.md  modify_govcookiecutter.md
docs/govcookiecutter_structure/: docs_structure_README.md
docs/reference/: docs_ref_README.md
docs/{{ cookiecutter.repo_name }}/: docs.md  tests.md  (+2 more)
gcc-lite/: main.py
govcookiecutter_structure/: docs.html  docs_structure_README.html  example.html  hooks.html  tests.html
hooks/: post_gen_project.py  pre_gen_project.py
reference/: docs_ref_README.html
tests/: test_documentation_build.py  test_env.py  test_govcookiecutter_creation.py  test_govcookiecutter_injected_variables.py
{{ cookiecutter.project_name }}/: README.md
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .gitignore  CODE_OF_CONDUCT.md  README.md
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_').replace('.','_').strip() }}/: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/: docs.html  docs_repo_README.html  dot_govcookiecutter.html  source_code.html  tests.html
(+17 files in other folders)
